# hpcg

./: .cproject  .gitignore  AUTHORS  BUGS  CG.cpp  CG.hpp  CMakeLists.txt  COPYING  COPYRIGHT  ComputeResidual.cpp  ExchangeHalo.hpp  GenerateGeometry.cpp  GenerateGeometry.hpp  GenerateProblem.cpp  Geometry.hpp  HISTORY  INSTALL  LICENSE  Make.top  Makefile  Makefile.am  Makefile.ext  Makefile.piotr  NEWS  OptimizeMatrix.cpp  OptimizeMatrix.hpp  QUICKSTART  README  README.md  ReportResults.cpp  SparseMatrix.hpp  TODO  TUNING  VERSION  WriteProblem.cpp  YAML_Doc.cpp  YAML_Doc.hpp  YAML_Element.cpp  configure  configure.ac  (+10 more)
doc/: HPCG workflow.pptx  HPCG workflow.tiff  HPCG-Specification.docx
setup/: Make.GCC_OMP  Make.ICPC_OMP  Make.Linux_MPI  Make.Linux_Serial  Make.MPIICPC_OMP  Make.MPI_GCC_OMP  Make.MPI_GCC_OpenMP  Make.MPI_ICPC  Make.MPI_ICPC_OMP  Make.Mac.MPI  Make.Mac.MPI_OpenMP  Make.Mac.OpenMP  Make.Mac.Serial  Make.Mac_MPI  Make.Mac_MPI_OpenMP  Make.Mac_OpenMP  Make.Mac_Serial  Make.Mac_Serial_debug  Make.UNKNOWN
src/: .GenerateProblem_ref.cpp.swp  .ReportResults.cpp.swp  .cproject  .project  CG.cpp  CG.hpp  CGData.hpp  CG_ref.cpp  CG_ref.hpp  CGref.cpp  CGref.hpp  CGtest.cpp  CGtest.hpp  CheckAspectRatio.cpp  CheckProblem.cpp  CheckProblem.hpp  ComputeDotProduct.cpp  ComputeDotProduct.hpp  ComputeDotProduct_ref.cpp  ComputeDotProduct_ref.hpp  ComputeMG.cpp  ComputeMG.hpp  ComputeMG_ref.cpp  ComputeMG_ref.hpp  ComputeOptimalShapeXYZ.cpp  ComputeProlongation_ref.cpp  ComputeProlongation_ref.hpp  ComputeResidual.cpp  ComputeResidual.hpp  ComputeRestriction_ref.cpp  ComputeRestriction_ref.hpp  ComputeSPMV.cpp  ComputeSPMV.hpp  ComputeSPMV_ref.cpp  ComputeSPMV_ref.hpp  ComputeSYMGS.cpp  ComputeSYMGS.hpp  ComputeSYMGS_ref.cpp  ComputeSYMGS_ref.hpp  ComputeWAXPBY.cpp  (+71 more)
test/: SparseMatrixTest.cpp
test/CG/: CGTest.cpp  Makefile  ReportResults.hpp
test/SparseMatrix/: Makefile  ReportResults.cpp  ReportResults.hpp  SparseMatrixTest.cpp
testing/: main.cpp
testing/Benchmark/: Makefile  Makefile.piotr  main.cpp
testing/CG/: CGTest.cpp  Makefile  Makefile.piotr  Makefile.ref  ReportCGResults.cpp  main.cpp
testing/SparseMatrix/: Makefile  Makefile.piotr  Makefile.ref  ReportSPMVResults.cpp  SparseMatrixTest.cpp  main.cpp
tools/: Makefile.mtxdmp  hpcg.astyle  hpcg.dox  hpcg.m  hpcg1.css  makefile.py  mtxdmp.cc  replace_header.py  strongScalingRunScript  tstrout.py  updateDoxWeb  updateTarfile  weakScalingRunScript
unittesting/Geometry/: build  main.cpp
unittesting/hpcg_dat/: Makefile  main.cpp
unittesting/yaml_output/: Makefile  main.cpp  readhpcgyaml.py
web/: HPCG_BOF.php  about.php  applications.php  contact.php  default.php  developer_tools.php  documentation.php  download.php  events.php  faq.php  faq_old.php  footer.html  index.html  license.php  mail_lists.php  nav_about.html  nav_events.html  nav_packages.html  nav_resources.html  news.php  packages.php  page.php  publications.php  release_notes.php  research.php  resources.php  results.php  software_design.php  team.php
web/common/: footer.html  header.html  html.css  main.css  nav_download.html  nav_events.html  nav_home.html  page.php
web/doc/: HPCG-Benchmark.docx  HPCG-Logo.pptx  HPCG-Logo.tiff  HPCG-Specification.docx
