
EXTRA_DIST = bin m4 setup tools unittesting web

bin_PROGRAMS = xhpcg

xhpcg_SOURCES =  \
src/CG.cpp src/CGData.hpp src/CG.hpp src/CG_ref.cpp src/CG_ref.hpp \
src/CheckAspectRatio.cpp src/CheckAspectRatio.hpp src/CheckProblem.cpp \
src/CheckProblem.hpp src/ComputeDotProduct.cpp src/ComputeDotProduct.hpp \
src/ComputeDotProduct_ref.cpp src/ComputeDotProduct_ref.hpp src/ComputeMG.cpp \
src/ComputeMG.hpp src/ComputeMG_ref.cpp src/ComputeMG_ref.hpp \
src/ComputeOptimalShapeXYZ.cpp src/ComputeOptimalShapeXYZ.hpp \
src/ComputeProlongation_ref.cpp src/ComputeProlongation_ref.hpp \
src/ComputeResidual.cpp src/ComputeResidual.hpp src/ComputeRestriction_ref.cpp \
src/ComputeRestriction_ref.hpp src/ComputeSPMV.cpp src/ComputeSPMV.hpp \
src/ComputeSPMV_ref.cpp src/ComputeSPMV_ref.hpp src/ComputeSYMGS.cpp \
src/ComputeSYMGS.hpp src/ComputeSYMGS_ref.cpp src/ComputeSYMGS_ref.hpp \
src/ComputeWAXPBY.cpp src/ComputeWAXPBY.hpp src/ComputeWAXPBY_ref.cpp \
src/ComputeWAXPBY_ref.hpp src/ExchangeHalo.cpp src/ExchangeHalo.hpp \
src/finalize.cpp src/GenerateCoarseProblem.cpp src/GenerateCoarseProblem.hpp \
src/GenerateGeometry.cpp src/GenerateGeometry.hpp src/GenerateProblem.cpp \
src/GenerateProblem.hpp src/GenerateProblem_ref.cpp src/GenerateProblem_ref.hpp \
src/Geometry.hpp src/hpcgconfig.hpp.in src/hpcg.hpp src/init.cpp src/main.cpp \
src/MGData.hpp src/MixedBaseCounter.cpp src/MixedBaseCounter.hpp \
src/mytimer.cpp src/mytimer.hpp src/OptimizeProblem.cpp src/OptimizeProblem.hpp \
src/OutputFile.cpp src/OutputFile.hpp src/ReadHpcgDat.cpp src/ReadHpcgDat.hpp \
src/ReportResults.cpp src/ReportResults.hpp src/SetupHalo.cpp src/SetupHalo.hpp \
src/SetupHalo_ref.cpp src/SetupHalo_ref.hpp src/SparseMatrix.hpp src/TestCG.cpp \
src/TestCG.hpp src/TestNorms.cpp src/TestNorms.hpp src/TestSymmetry.cpp \
src/TestSymmetry.hpp src/Vector.hpp src/WriteProblem.cpp src/WriteProblem.hpp \
src/YAML_Doc.cpp src/YAML_Doc.hpp src/YAML_Element.cpp src/YAML_Element.hpp
